--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <div class="row justify-content-center">
                     <div class="col-md-2">
                         <div class="card shadow">
-                            <img src="/img/Rectangle 42.png" alt="">
+                            <img src="img/Rectangle 42.png" alt="">
                             <div class="cardbody">
                                 <p class="text-center intro"><b>Introduction to Machine learning</b></p>
                                 <p class="intro text-center">By kodekamp</p>
@@ -97,7 +97,7 @@
                     </div>
                     <div class="col-md-2 mage">
                         <div class="card shadow">
-                            <img src="/img/Rectangle 34.png" alt="" width="100%">
+                            <img src="img/Rectangle 34.png" alt="" width="100%">
                             <div class="cardbody">
                                 <p class="text-center intro"><b>Image Processing for Python</b></p>
                                 <p class="intro text-center">By kodekamp</p>
@@ -108,7 +108,7 @@
                     </div>
                     <div class="col-md-2 mage">
                         <div class="card shadow">
-                            <img src="/img/Rectangle 36.png" alt="" width="100%">
+                            <img src="img/Rectangle 36.png" alt="" width="100%">
                             <div class="cardbody">
                                 <p class="text-center intro"><b>Nigeria Cuisine Masterclass</b></p>
                                 <p class="intro text-center">By kodekamp</p>
@@ -119,7 +119,7 @@
                     </div>
                     <div class="col-md-2 mage">
                         <div class="card shadow">
-                            <img src="/img/Rectangle 38.png" alt="" width="100%">
+                            <img src="img/Rectangle 38.png" alt="" width="100%">
                             <div class="cardbody">
                                 <p class="text-center intro"><b>Coding the Backend with PHP</b></p>
                                 <p class="intro text-center">By kodekamp</p>
@@ -130,7 +130,7 @@
                     </div>
                     <div class="col-md-2 mage ">
                         <div class="card shadow">
-                            <img src="/img/Rectangle 40.png" alt="" width="100%">
+                            <img src="img/Rectangle 40.png" alt="" width="100%">
                             <div class="cardbody">
                                 <p class="text-center intro"><b>Introduction to Machine learning</b></p>
                                 <p class="intro text-center">By kodekamp</p>
@@ -144,7 +144,7 @@
                 <div class="row justify-content-center py-3">
                     <div class="col-md-2 mage">
                         <div class="card shadow">
-                            <img src="/img/Rectangle 42.png" alt="">
+                            <img src="img/Rectangle 42.png" alt="">
                             <div class="cardbody">
                                 <p class="text-center intro"><b>Introduction to Machine learning</b></p>
                                 <p class="intro text-center">By kodekamp</p>
@@ -155,7 +155,7 @@
                     </div>
                     <div class="col-md-2">
                         <div class="card shadow mage">
-                            <img src="/img/Rectangle 34.png" alt="" width="100%">
+                            <img src="img/Rectangle 34.png" alt="" width="100%">
                             <div class="cardbody">
                                 <p class="text-center intro"><b>Image Processing for Python</b></p>
                                 <p class="intro text-center">By kodekamp</p>
@@ -166,7 +166,7 @@
                     </div>
                     <div class="col-md-2 mage">
                         <div class="card shadow">
-                            <img src="/img/Rectangle 36.png" alt="" width="100%">
+                            <img src="img/Rectangle 36.png" alt="" width="100%">
                             <div class="cardbody">
                                 <p class="text-center intro"><b>Nigeria Cuisine Masterclass</b></p>
                                 <p class="intro text-center">By kodekamp</p>
@@ -177,7 +177,7 @@
                     </div>
                     <div class="col-md-2 mage">
                         <div class="card shadow">
-                            <img src="/img/Rectangle 38.png" alt="" width="100%">
+                            <img src="img/Rectangle 38.png" alt="" width="100%">
                             <div class="cardbody">
                                 <p class="text-center intro"><b>Coding the Backend with PHP</b></p>
                                 <p class="intro text-center">By kodekamp</p>
@@ -188,7 +188,7 @@
                     </div>
                     <div class="col-md-2 mage">
                         <div class="card shadow">
-                            <img src="/img/Rectangle 40.png" alt="" width="100%">
+                            <img src="img/Rectangle 40.png" alt="" width="100%">
                             <div class="cardbody">
                                 <p class="text-center intro"><b>Introduction to Machine learning</b></p>
                                 <p class="intro text-center">By kodekamp</p>
@@ -202,7 +202,7 @@
                 <div class="row justify-content-center">
                     <div class="col-md-2 mage">
                         <div class="card shadow">
-                            <img src="/img/Rectangle 42.png" alt="">
+                            <img src="img/Rectangle 42.png" alt="">
                             <div class="cardbody">
                                 <p class="text-center intro"><b>Introduction to Machine learning</b></p>
                                 <p class="intro text-center">By kodekamp</p>
@@ -213,7 +213,7 @@
                     </div>
                     <div class="col-md-2 mage">
                         <div class="card shadow">
-                            <img src="/img/Rectangle 34.png" alt="" width="100%">
+                            <img src="img/Rectangle 34.png" alt="" width="100%">
                             <div class="cardbody">
                                 <p class="text-center intro"><b>Image Processing for Python</b></p>
                                 <p class="intro text-center">By kodekamp</p>
@@ -224,7 +224,7 @@
                     </div>
                     <div class="col-md-2 mage">
                         <div class="card shadow">
-                            <img src="/img/Rectangle 36.png" alt="" width="100%">
+                            <img src="img/Rectangle 36.png" alt="" width="100%">
                             <div class="cardbody">
                                 <p class="text-center intro"><b>Nigeria Cuisine Masterclass</b></p>
                                 <p class="intro text-center">By kodekamp</p>
@@ -235,7 +235,7 @@
                     </div>
                     <div class="col-md-2 mage">
                         <div class="card shadow">
-                            <img src="/img/Rectangle 38.png" alt="" width="100%">
+                            <img src="img/Rectangle 38.png" alt="" width="100%">
                             <div class="cardbody">
                                 <p class="text-center intro"><b>Coding the Backend with PHP</b></p>
                                 <p class="intro text-center">By kodekamp</p>
@@ -246,7 +246,7 @@
                     </div>
                     <div class="col-md-2 mage">
                         <div class="card shadow">
-                            <img src="/img/Rectangle 40.png" alt="" width="100%">
+                            <img src="img/Rectangle 40.png" alt="" width="100%">
                             <div class="cardbody">
                                 <p class="text-center intro"><b>Introduction to Machine learning</b></p>
                                 <p class="intro text-center">By kodekamp</p>
