--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
      <section class="class py-5">
         <div class="container-fluid">
             <div class="row justify-content-center">
-                <div class="col-md-3 mt-3 mt-md-0 px-5">
+                <div class="col-md-3 mt-3 mt-md-0 px-5 px-md-2">
                     <div class="card shadow">
                         <img src="img/Rectangle 9 (8).png" alt="" width="100%" class="user1">
                         <div class="card-body">
@@ -276,7 +276,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3 mt-3 mt-md-0 px-5">
+                <div class="col-md-3 mt-3 mt-md-0 px-5 px-md-2">
                     <div class="card shadow">
                         <img src="img/Rectangle 9 (9).png" alt="" width="100%" class="user1">
                         <div class="card-body">
@@ -284,7 +284,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3 mt-3 mt-md-0 px-5">
+                <div class="col-md-3 mt-3 mt-md-0 px-5 px-md-2">
                     <div class="card shadow">
                         <img src="img/Rectangle 9 (10).png" alt="" width="100%" class="user1">
                         <div class="card-body">
@@ -295,7 +295,7 @@
             </div>
     
             <div class="row py-4 justify-content-center ">
-                <div class="col-md-3 mt-3 mt-md-0 px-5">
+                <div class="col-md-3 mt-3 mt-md-0 px-5 px-md-2">
                     <div class="card shadow">
                         <img src="img/Rectangle 9.png" alt="" width="100%" class="user1">
                         <div class="card-body">
@@ -303,7 +303,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3 mt-3 mt-md-0 px-5">
+                <div class="col-md-3 mt-3 mt-md-0 px-5 px-md-2">
                     <div class="card shadow">
                         <img src="img/Rectangle 9 (11).png" alt="" width="100%" class="user1">
                         <div class="card-body">
@@ -311,7 +311,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3 mt-3 mt-md-0 px-5">
+                <div class="col-md-3 mt-3 mt-md-0 px-5 px-md-2">
                     <div class="card shadow">
                         <img src="img/Rectangle 9 (12).png" alt="" width="100%" class="user1">
                         <div class="card-body">
@@ -443,7 +443,7 @@
 
                     <a href="#" class="btn btn-browse"><b>Browse classes</b></a>
                 </div>
-                 <div class="col-md-7 corp">
+                 <div class="col-md-7 copy">
                     <img src="img/Path 5 Copy.png" alt="" class="ml-5 path">
                     <img src="img/Rectangle 24.png" alt="" class="dami">
                 </div> 
