--- a/index.html
+++ b/index.html
@@ -16,14 +16,15 @@
   <nav class="navbar navbar-expand-md navbar-dark sticky-top pr-2" role="navigation">
       <div class="container-fluid">
         <img src="img/landing-logo-c.png" alt="logo" width="65px" class="button mb-2"> 
-         <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
+        <a href="" class=""><i class="fa fa-shopping-cart d-none text-white"></i></a>
+         <button class="navbar-toggler d-md-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
              aria-expanded="false" aria-label="Toggle navigation">
          <span class="navbar-toggler-icon"></span>
          </button>
          <div class="collapse navbar-collapse" id="collapsibleNavId">
              <ul class="navbar-nav"> 
                  <li class="nav-items"><a href="#" class="nav-link">categories</a></li>
-                <form class="d-none d-lg-block">
+                <form class="">
                     <input type="text" class="form-control cate" placeholder="Search for any course">
                     <i class="fa fa-search fleet"></i>
                 </form>
@@ -37,9 +38,9 @@
          </div>
          </div>
      </nav>
-     <form class="d-block d-lg-none text-center p-3">
+     <!-- <form class="d-block d-lg-none text-center p-3">
          <input type="text" class="form-control" placeholder="Search for any Course of your choice">
-     </form>
+     </form> -->
 
      <section class="section1">
         <div class="vector">
@@ -50,21 +51,21 @@
     <section class="section2 py-5">
         <div class="container">
          <div class="row justify-content-center">
-             <div class="col-md-5 come">
+             <div class="col-md-5 col-5 come">
                  <p class="master">Become A Master</p>
-                <img src="img/Learnr.png" alt="" width="80%">
+                <img src="img/Learnr.png" alt="" width="80%" class="find">
                 <a href="#" class="btn btn-get">Get started</a>
              </div>
-             <div class="col-md-5">
+             <div class="col-md-5 col-5">
                  <div class="row">
-                     <div class="col-md-4">
-                 <img src="img/Rectangle 26.png" alt="" class="d-none d-md-block" width="110%">
+                     <div class="col-md-4 col-4">
+                 <img src="img/Rectangle 26.png" alt="" class="angle" width="110%">
                 </div>
-                <div class="col-md-4">
-                    <img src="img/Rectangle 27.png" alt="" class="d-none d-md-block mid" width="110%">
+                <div class="col-md-4 col-4">
+                    <img src="img/Rectangle 27.png" alt="" class="mid" width="110%">
                    </div>
-                   <div class="col-md-4">
-                    <img src="img/Rectangle 28.png" alt="" class="d-none d-md-block " width="110%">
+                   <div class="col-md-4 col-4">
+                    <img src="img/Rectangle 28.png" alt="" class="angle" width="110%">
                    </div>
                 
              </div>
@@ -76,17 +77,17 @@
         <section class="pt-5">
         <div class="container-fluid">
             <p class="top">Top Featured Courses</p>
-            <div class="row justify-content-center py-4">
-               <a href="#" class="dev"><p class=""><b>Development</b></p></a>
-               <a href="#" class="dev"><p><b>Photography</b></p></a>
-               <a href="#" class="dev"><p><b>Cooking</b></p></a>
-               <a href="#" class="dev"><p><b>Finance</b></p></a>
-               <a href="#" class="dev"><p><b>Marketing</b></p></a>
-               <a href="#" class="dev"><p><b>Development</b></p></a>
+            <div class="row justify-content-center py-4 none">
+               <a href="#" class="dev"><p class="d-none d-md-block"><b>Development</b></p></a>
+               <a href="#" class="dev"><p class="d-none d-md-block"><b>Photography</b></p></a>
+               <a href="#" class="dev"><p class="d-none d-md-block"><b>Cooking</b></p></a>
+               <a href="#" class="dev"><p class="d-none d-md-block"><b>Finance</b></p></a>
+               <a href="#" class="dev"><p class="d-none d-md-block"><b>Marketing</b></p></a>
+               <a href="#" class="dev"><p class="d-none d-md-block"><b>Development</b></p></a>
             </div>
             <div class="card border py-5">
                 <div class="row justify-content-center">
-                    <div class="col-md-2">
+                    <div class="col-md-2 col-6">
                         <div class="card shadow">
                             <img src="img/Rectangle 42.png" alt="">
                             <div class="cardbody">
@@ -97,7 +98,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-2 mage">
+                    <div class="col-md-2 mage col-6">
                         <div class="card shadow">
                             <img src="img/Rectangle 34.png" alt="" width="100%">
                             <div class="cardbody">
@@ -108,7 +109,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-2 mage">
+                    <div class="col-md-2 mage col-6">
                         <div class="card shadow">
                             <img src="img/Rectangle 36.png" alt="" width="100%">
                             <div class="cardbody">
@@ -119,7 +120,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-2 mage">
+                    <div class="col-md-2 mage col-6">
                         <div class="card shadow">
                             <img src="img/Rectangle 38.png" alt="" width="100%">
                             <div class="cardbody">
@@ -130,7 +131,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-2 mage ">
+                    <div class="col-md-2 mage col-6 d-none d-md-block">
                         <div class="card shadow">
                             <img src="img/Rectangle 40.png" alt="" width="100%">
                             <div class="cardbody">
@@ -144,7 +145,7 @@
                 </div>
 
                 <div class="row justify-content-center py-3">
-                    <div class="col-md-2 mage">
+                    <div class="col-md-2 mage col-6">
                         <div class="card shadow">
                             <img src="img/Rectangle 42.png" alt="">
                             <div class="cardbody">
@@ -155,7 +156,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-2">
+                    <div class="col-md-2 col-6">
                         <div class="card shadow mage">
                             <img src="img/Rectangle 34.png" alt="" width="100%">
                             <div class="cardbody">
@@ -166,7 +167,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-2 mage">
+                    <div class="col-md-2 mage col-6">
                         <div class="card shadow">
                             <img src="img/Rectangle 36.png" alt="" width="100%">
                             <div class="cardbody">
@@ -177,7 +178,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-2 mage">
+                    <div class="col-md-2 mage col-6">
                         <div class="card shadow">
                             <img src="img/Rectangle 38.png" alt="" width="100%">
                             <div class="cardbody">
@@ -188,7 +189,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-2 mage">
+                    <div class="col-md-2 mage col-6 d-none d-md-block">
                         <div class="card shadow">
                             <img src="img/Rectangle 40.png" alt="" width="100%">
                             <div class="cardbody">
@@ -202,7 +203,7 @@
                 </div>
 
                 <div class="row justify-content-center">
-                    <div class="col-md-2 mage">
+                    <div class="col-md-2 mage col-6">
                         <div class="card shadow">
                             <img src="img/Rectangle 42.png" alt="">
                             <div class="cardbody">
@@ -213,7 +214,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-2 mage">
+                    <div class="col-md-2 mage col-6">
                         <div class="card shadow">
                             <img src="img/Rectangle 34.png" alt="" width="100%">
                             <div class="cardbody">
@@ -224,7 +225,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-2 mage">
+                    <div class="col-md-2 mage col-6">
                         <div class="card shadow">
                             <img src="img/Rectangle 36.png" alt="" width="100%">
                             <div class="cardbody">
@@ -235,7 +236,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-2 mage">
+                    <div class="col-md-2 mage col-6">
                         <div class="card shadow">
                             <img src="img/Rectangle 38.png" alt="" width="100%">
                             <div class="cardbody">
@@ -246,7 +247,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-2 mage">
+                    <div class="col-md-2 mage col-6 d-none d-md-block">
                         <div class="card shadow">
                             <img src="img/Rectangle 40.png" alt="" width="100%">
                             <div class="cardbody">
@@ -268,7 +269,7 @@
      <section class="class py-5">
         <div class="container-fluid">
             <div class="row justify-content-center">
-                <div class="col-md-3 mt-3 mt-md-0 px-5 px-md-2">
+                <div class="col-md-3 mt-3 mt-md-0 col-6 px-lg-5">
                     <div class="card shadow">
                         <img src="img/Rectangle 9 (8).png" alt="" width="100%" class="user1">
                         <div class="card-body">
@@ -276,7 +277,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3 mt-3 mt-md-0 px-5 px-md-2">
+                <div class="col-md-3 mt-3 mt-md-0 col-6 px-lg-5">
                     <div class="card shadow">
                         <img src="img/Rectangle 9 (9).png" alt="" width="100%" class="user1">
                         <div class="card-body">
@@ -284,7 +285,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3 mt-3 mt-md-0 px-5 px-md-2">
+                <div class="col-md-3 mt-3 mt-md-0 col-6 px-lg-5 d-none d-md-block">
                     <div class="card shadow">
                         <img src="img/Rectangle 9 (10).png" alt="" width="100%" class="user1">
                         <div class="card-body">
@@ -295,7 +296,7 @@
             </div>
     
             <div class="row py-4 justify-content-center ">
-                <div class="col-md-3 mt-3 mt-md-0 px-5 px-md-2">
+                <div class="col-md-3 mt-3 mt-md-0 col-6 px-lg-5">
                     <div class="card shadow">
                         <img src="img/Rectangle 9.png" alt="" width="100%" class="user1">
                         <div class="card-body">
@@ -303,7 +304,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3 mt-3 mt-md-0 px-5 px-md-2">
+                <div class="col-md-3 mt-3 mt-md-0 col-6 px-lg-5">
                     <div class="card shadow">
                         <img src="img/Rectangle 9 (11).png" alt="" width="100%" class="user1">
                         <div class="card-body">
@@ -311,7 +312,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3 mt-3 mt-md-0 px-5 px-md-2">
+                <div class="col-md-3 mt-3 mt-md-0 col-6 px-lg-5 d-none d-md-block">
                     <div class="card shadow">
                         <img src="img/Rectangle 9 (12).png" alt="" width="100%" class="user1">
                         <div class="card-body">
@@ -325,8 +326,8 @@
 
    <section class="class py-5">
         <div class="container">
-            <div class="row justify-content-center ml-5">
-                <div class="col-md-4 mr-5"> 
+            <div class="row justify-content-center ml-lg-5">
+                <div class="col-md-4 mr-lg-5"> 
                   <img src="img/african-american-man-using-laptop-entertainment 2.png" alt="" class="africa mt-5">
               </div> 
               <div class="col-md-7">
@@ -526,27 +527,27 @@
                     <p class="text-white pl-5">&#x24B8; 2022</p>
                     <p class="text-white pl-5">All Rights Reserved</p>
                 </div>
-                <div class="col-md-2 pl-5">
+                <div class="col-md-2 col-6 pl-5">
                     <h5 class="text-white comp"><b>Company</b></h5>
                     <a href="#" class="text-white"><p >About Us</p></a>
                     <a href="#" class="text-white"><p>Teach on Learnr</p></a>
                     <a href="#" class="text-white"><p>Affiliate Programme</p></a>
                     <a href="#" class="text-white"><p>Resources</p></a>
                 </div>
-                        <div class="col-md-2  pl-5">
+                        <div class="col-md-2 col-6 pl-5">
                             <h5 class="text-white comp"><b>Solutions</b></h5>
                             <a href="#" class="text-white"><p>Corporate Learnr</p></a>
                             <a href="#" class="text-white"><p>Learnr intern</p></a>
                             <a href="#" class="text-white"><p>Free Classes</p></a>
                         </div>
-                        <div class="col-md-2  text-white pl-5">
+                        <div class="col-md-2 col-6 text-white pl-5">
                             <h5 class="comp"><b>Legal</b></h5>
                             <a href="#" class="text-white"><p>Terms of Use</p></a>
                             <a href="#" class="text-white"><p>Privacy Policy</p></a>
                             <a href="#" class="text-white"><p>Refund Policy</p></a>
                             <a href="#" class="text-white"><p>Lodge a complain</p></a>
                         </div>
-                        <div class="col-md-2  text-white pl-5">
+                        <div class="col-md-2 col-6 text-white pl-5">
                             <h5 class="text-white comp"><b>Contact Us</b></h5>
                             <a href="#" class="text-white"><p>Chat with Us</p></a>
                             <a href="#" class="text-white"><p>Send an Email</p></a>
