--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
     
   <nav class="navbar navbar-expand-md navbar-dark sticky-top pr-2" role="navigation">
       <div class="container-fluid">
+           <a href="" class=""><i class="fa fa-shopping-cart d-flex d-md-none  text-white"></i></a>
+           <a href="" class=""><i class="fa fa-search d-flex d-md-none text-white pr-5"></i></a>
         <img src="img/landing-logo-c.png" alt="logo" width="65px" class="button mb-2"> 
-        <a href="" class=""><i class="fa fa-shopping-cart d-none text-white"></i></a>
+       
          <button class="navbar-toggler d-md-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
              aria-expanded="false" aria-label="Toggle navigation">
          <span class="navbar-toggler-icon"></span>
@@ -38,9 +40,6 @@
          </div>
          </div>
      </nav>
-     <!-- <form class="d-block d-lg-none text-center p-3">
-         <input type="text" class="form-control" placeholder="Search for any Course of your choice">
-     </form> -->
 
      <section class="section1">
         <div class="vector">
@@ -98,7 +97,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-2 mage col-6">
+                    <div class="col-md-2 col-6">
                         <div class="card shadow">
                             <img src="img/Rectangle 34.png" alt="" width="100%">
                             <div class="cardbody">
@@ -393,7 +392,7 @@
                                 <img src="img/Victor.png" alt="" class="tool">
                             </div>
                             <div class="col-md-9">
-                                <small><b>Learn at your pace</b><br> Pause & play the lectures videos while learning alone.</small>
+                                <small class="pace"><b>Learn at your pace</b><br> Pause & play the lectures videos while learning alone.</small>
                             </div>
                         </div>
                     </div>
@@ -404,7 +403,7 @@
                                <img src="img/vector (1).png" alt="" class="torm">
                             </div>
                             <div class="col-md-9">
-                                <small><b>Access courses on any device</b><br> Leran the topic on PC, mobile or any smart device.</small>
+                                <small class="pace"><b>Access courses on any device</b><br> Leran the topic on PC, mobile or any smart device.</small>
                             </div>
                         </div>
                     </div>
@@ -415,7 +414,7 @@
                                 <img src="img/Vector (2).png" alt="" class="torms">
                             </div>
                             <div class="col-md-9">
-                                <small><b>High quality on-demand content</b><br> Experience the high-quality adaptive video content.</small>
+                                <small class="pace"><b>High quality on-demand content</b><br> Experience the high-quality adaptive video content.</small>
                             </div>
                         </div>
                     </div>
@@ -426,7 +425,7 @@
                                 <img src="img/Vector (3).png" alt="" class="torm">
                             </div>
                             <div class="col-md-9">
-                                <small><b>Get notified everytime</b><br>  Receieve notifications when new courses are added.</small>
+                                <small class="pace"><b>Get notified everytime</b><br>  Receieve notifications when new courses are added.</small>
                             </div>
                         </div>
                     </div>
@@ -493,7 +492,7 @@
                             </div>
                         </div>
                         </div>
-                        <h4><b>= N 500,000/mo </b><span class="potent">in potential earnings</span></h4>
+                        <h5><b>= N 500,000/mo </b><span class="potent">in potential earnings</span></h5>
                     </div>
 
                 </div>
