--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="container-fluid">
            <a href="" class=""><i class="fa fa-shopping-cart d-flex d-md-none  text-white"></i></a>
            <a href="" class=""><i class="fa fa-search d-flex d-md-none text-white pr-5"></i></a>
-        <img src="img/landing-logo-c.png" alt="logo" width="65px" class="button mb-2"> 
+        <img src="img/latoding-logo-c.png" alt="logo" width="65px" class="button mb-2"> 
        
          <button class="navbar-toggler d-md-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
              aria-expanded="false" aria-label="Toggle navigation">
@@ -400,7 +400,7 @@
                         <div class="row">
                             <div class="col-md-3">
                                 <img src="img/Ellipse 1.png" alt="" class="tool">
-                               <img src="img/vector (1).png" alt="" class="torm">
+                               <img src="img/Vector (1).png" alt="" class="torm">
                             </div>
                             <div class="col-md-9">
                                 <small class="pace"><b>Access courses on any device</b><br> Leran the topic on PC, mobile or any smart device.</small>
