--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="container-fluid">
            <a href="" class=""><i class="fa fa-shopping-cart d-flex d-md-none  text-white"></i></a>
            <a href="" class=""><i class="fa fa-search d-flex d-md-none text-white pr-5"></i></a>
-        <img src="img/latoding-logo-c.png" alt="logo" width="65px" class="button mb-2"> 
+        <img src="img/landing-logo-c.png" alt="logo" width="65px" class="button mb-2"> 
        
          <button class="navbar-toggler d-md-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
              aria-expanded="false" aria-label="Toggle navigation">
